--- a/.github/workflows/flutter-nightly.yml
+++ b/.github/workflows/flutter-nightly.yml
@@ -2,8 +2,6 @@ name: Flutter Nightly Build
 
 on:
   schedule:
-    # schedule build every night
-    - cron: "0 0 * * *"
   workflow_dispatch:
 
 env:
@@ -268,7 +266,7 @@ jobs:
       fail-fast: false
       matrix:
         job:
-          # - { arch: armv7, os: ubuntu-20.04 }
+          - { arch: armv7, os: ubuntu-20.04 }
           - { arch: x86_64, os: ubuntu-20.04 }
           - { arch: aarch64, os: ubuntu-20.04 }
     steps:
@@ -433,12 +431,12 @@ jobs:
               os: ubuntu-18.04,
               extra-build-features: "",
             }
-          # - {
-          #     arch: x86_64,
-          #     target: armv7-linux-androideabi,
-          #     os: ubuntu-18.04,
-          #     extra-build-features: "",
-          #   }
+          - {
+               arch: x86_64,
+               target: armv7-linux-androideabi,
+               os: ubuntu-18.04,
+               extra-build-features: "",
+             }
     steps:
       - name: Install dependencies
         run: |
@@ -765,16 +763,16 @@ jobs:
               use-cross: true,
               extra-build-features: "appimage",
             }
-          # - { arch: aarch64, target: aarch64-unknown-linux-gnu   , os: ubuntu-20.04, use-cross: true, extra-build-features: "flatpak" }
-          # - {
-          #     arch: armv7,
-          #     target: arm-unknown-linux-gnueabihf,
-          #     os: ubuntu-20.04,
-          #     use-cross: true,
-          #     extra-build-features: "",
-          #   }
-          # - { arch: armv7, target: arm-unknown-linux-gnueabihf , os: ubuntu-20.04, use-cross: true, extra-build-features: "flatpak" }
-          # - { target: arm-unknown-linux-musleabihf, os: ubuntu-20.04, use-cross: true }
+          - { arch: aarch64, target: aarch64-unknown-linux-gnu   , os: ubuntu-20.04, use-cross: true, extra-build-features: "flatpak" }
+          - {
+              arch: armv7,
+              target: arm-unknown-linux-gnueabihf,
+              os: ubuntu-20.04,
+              use-cross: true,
+              extra-build-features: "",
+            }
+          - { arch: armv7, target: arm-unknown-linux-gnueabihf , os: ubuntu-20.04, use-cross: true, extra-build-features: "flatpak" }
+          - { target: arm-unknown-linux-musleabihf, os: ubuntu-20.04, use-cross: true }
     steps:
       - name: Maximize build space
         run: |
@@ -942,16 +940,16 @@ jobs:
               use-cross: true,
               extra-build-features: "appimage",
             }
-          # - {
-          #     arch: aarch64,
-          #     target: aarch64-unknown-linux-gnu,
-          #     os: ubuntu-18.04, # just for naming package, not running host
-          #     use-cross: true,
-          #     extra-build-features: "flatpak",
-          #   }
-          # - { arch: armv7, target: arm-unknown-linux-gnueabihf , os: ubuntu-20.04, use-cross: true, extra-build-features: "" }
-          # - { arch: armv7, target: arm-unknown-linux-gnueabihf , os: ubuntu-20.04, use-cross: true, extra-build-features: "flatpak" }
-          # - { target: arm-unknown-linux-musleabihf, os: ubuntu-20.04, use-cross: true }
+          - {
+              arch: aarch64,
+              target: aarch64-unknown-linux-gnu,
+              os: ubuntu-18.04, # just for naming package, not running host
+              use-cross: true,
+              extra-build-features: "flatpak",
+            }
+          - { arch: armv7, target: arm-unknown-linux-gnueabihf , os: ubuntu-20.04, use-cross: true, extra-build-features: "" }
+          - { arch: armv7, target: arm-unknown-linux-gnueabihf , os: ubuntu-20.04, use-cross: true, extra-build-features: "flatpak" }
+          - { target: arm-unknown-linux-musleabihf, os: ubuntu-20.04, use-cross: true }
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
@@ -1211,7 +1209,7 @@ jobs:
               os: ubuntu-18.04,
               extra-build-features: "appimage",
             }
-          # - { target: x86_64-unknown-linux-musl   , os: ubuntu-20.04, use-cross: true }
+          - { target: x86_64-unknown-linux-musl   , os: ubuntu-20.04, use-cross: true }
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
@@ -1394,69 +1392,67 @@ jobs:
           files: |
             /opt/artifacts/rpm/*.rpm
 
-  # Temporary disable flatpak arm build
-  #
-  # build-flatpak-arm:
-  #   name: Build Flatpak
-  #   needs: [build-rustdesk-linux-arm]
-  #   runs-on: ${{ matrix.job.os }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       job:
-  #         # - { target: aarch64-unknown-linux-gnu   , os: ubuntu-18.04, arch: arm64 }
-  #         - { target: aarch64-unknown-linux-gnu, os: ubuntu-20.04, arch: arm64  }
-  #   steps:
-  #     - name: Checkout source code
-  #       uses: actions/checkout@v3
 
-  #     - name: Download Binary
-  #       uses: actions/download-artifact@master
-  #       with:
-  #         name: rustdesk-${{ env.VERSION }}-${{ matrix.job.target }}-${{ matrix.job.os }}.deb
-  #         path: .
+  build-flatpak-arm:
+    name: Build Flatpak
+    needs: [build-rustdesk-linux-arm]
+    runs-on: ${{ matrix.job.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        job:
+          - { target: aarch64-unknown-linux-gnu   , os: ubuntu-18.04, arch: arm64 }
+          - { target: aarch64-unknown-linux-gnu, os: ubuntu-20.04, arch: arm64  }
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
 
-  #     - name: Rename Binary
-  #       run: |
-  #         mv rustdesk-${{ env.VERSION }}-${{ matrix.job.target }}-${{ matrix.job.os }}.deb rustdesk-${{ env.VERSION }}.deb
+      - name: Download Binary
+        uses: actions/download-artifact@master
+        with:
+          name: rustdesk-${{ env.VERSION }}-${{ matrix.job.target }}-${{ matrix.job.os }}.deb
+          path: .
 
-  #     - uses: Kingtous/run-on-arch-action@amd64-support
-  #       name: Build rustdesk flatpak package for ${{ matrix.job.arch }}
-  #       id: rpm
-  #       with:
-  #         arch: ${{ matrix.job.arch }}
-  #         distro: ubuntu18.04
-  #         githubToken: ${{ github.token }}
-  #         setup: |
-  #           ls -l "${PWD}"
-  #         dockerRunArgs: |
-  #           --volume "${PWD}:/workspace"
-  #         shell: /bin/bash
-  #         install: |
-  #           apt update -y
-  #           apt install -y rpm
-  #         run: |
-  #           pushd /workspace
-  #           # install
-  #           apt update -y
-  #           apt install -y flatpak flatpak-builder cmake g++ gcc git curl wget nasm yasm libgtk-3-dev git
-  #           # flatpak deps
-  #           flatpak --user remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-  #           flatpak --user install -y flathub org.freedesktop.Platform/${{ matrix.job.arch }}/21.08
-  #           flatpak --user install -y flathub org.freedesktop.Sdk/${{ matrix.job.arch }}/21.08
-  #           # package
-  #           pushd flatpak
-  #           git clone https://github.com/flathub/shared-modules.git --depth=1
-  #           flatpak-builder --user --force-clean --repo=repo ./build ./rustdesk.json
-  #           flatpak build-bundle ./repo rustdesk-${{ env.VERSION }}-${{ matrix.job.target }}.flatpak org.rustdesk.rustdesk
+      - name: Rename Binary
+        run: |
+          mv rustdesk-${{ env.VERSION }}-${{ matrix.job.target }}-${{ matrix.job.os }}.deb rustdesk-${{ env.VERSION }}.deb
+      - uses: Kingtous/run-on-arch-action@amd64-support
+        name: Build rustdesk flatpak package for ${{ matrix.job.arch }}
+        id: rpm
+        with:
+          arch: ${{ matrix.job.arch }}
+          distro: ubuntu18.04
+          githubToken: ${{ github.token }}
+          setup: |
+            ls -l "${PWD}"
+          dockerRunArgs: |
+            --volume "${PWD}:/workspace"
+          shell: /bin/bash
+          install: |
+            apt update -y
+            apt install -y rpm
+          run: |
+            pushd /workspace
+            # install
+            apt update -y
+            apt install -y flatpak flatpak-builder cmake g++ gcc git curl wget nasm yasm libgtk-3-dev git
+            # flatpak deps
+            flatpak --user remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+            flatpak --user install -y flathub org.freedesktop.Platform/${{ matrix.job.arch }}/21.08
+            flatpak --user install -y flathub org.freedesktop.Sdk/${{ matrix.job.arch }}/21.08
+           # package
+            pushd flatpak
+            git clone https://github.com/flathub/shared-modules.git --depth=1
+            flatpak-builder --user --force-clean --repo=repo ./build ./rustdesk.json
+            flatpak build-bundle ./repo rustdesk-${{ env.VERSION }}-${{ matrix.job.target }}.flatpak org.rustdesk.rustdesk
 
-  #     - name: Publish flatpak package
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         prerelease: true
-  #         tag_name: ${{ env.TAG_NAME }}
-  #         files: |
-  #           flatpak/rustdesk-${{ env.VERSION }}-${{ matrix.job.target }}.flatpak
+      - name: Publish flatpak package
+        uses: softprops/action-gh-release@v1
+        with:
+          prerelease: true
+          tag_name: ${{ env.TAG_NAME }}
+          files: |
+             flatpak/rustdesk-${{ env.VERSION }}-${{ matrix.job.target }}.flatpak
 
   build-flatpak-amd64:
     name: Build Flatpak
